name:                hdnsbench
version:             0.1.0.0
synopsis:            DNS benchmark
-- description:         
license:             AllRightsReserved
license-file:        LICENSE
author:              Daria Zimarina
maintainer:          dzimarina@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable hdnsbench
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.8
                     , dns >= 1.4.5
                     , network >= 2.6
                     , async >= 2.0
                     , bytestring >= 0.10
  -- hs-source-dirs:      
  default-language:    Haskell2010
